# gematrick

./: books.json  pyproject.toml
gematrick/: __init__.py  __main__.py  bookdata.py  books.py  count_book_chs.py
tests/: test_basic.py
