[tool.poetry]
name = "gematrick"
version = "0.1.0"
description = ""
authors = ["Grayson <grayson.miller124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hebrew = "^0.6.0"
mpmath = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gematrick = "gematrick.__main__:main"